tests/files/parser_tests/should_fail/114.cmdr
//Should not parse
read { hello };